--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,39 @@
 
+offline mod - add creatures from a list names and portaits without dnd beyonds help
+-----
+creature search list - view button, edit button (later), add to encounter button 
+encounter list - initiative, name, edit hp, edit ac, add effect - hide - remove button 
+DM view (extra options - and portraits) - encounter creatures list
+Player view (only portraits) - encounter creatures list
+
+add creature to encounter 
+remove creature from encounter
+quick edit - change name, hp (only can see in dm view), AC
+
+
+HOW
+-----
+grab static monster jsons from https://improvedinitiative.app/ that have all links to https://api.open5e.com/v1/monsters/?format=api
+search image on https://monster-service.dndbeyond.com/v1/Monster?search=anubian&skip=0&take=1
+aggregate!
+
+BROKEN 
+----
+when removing a monster it selects it
+
+
+FIXED - offline mode
+------
+fix problem with scrolling adding more then it needs to and spamming api calls 
+
+
+
+
 king
 ----
 make icons percntages of screen because they are too small for big screen
 add family tree 
+
 
 
 FIXED
@@ -16,31 +47,3 @@ refresh on reveal
 add death saves
 add auto refresh 5 minutes or so
 added youtube video link upload for backgrounds
-
-
-////
-// Blinded
-// Charmed
-// Deafened
-// Frightened
-// Paralyzed
-// Petrified
-// Poisoned
-// Stunned
-// Hunters Mark
-// Bless
-// Hex
-// Burning
-// Slowed
-// Haste
-
-
-// Grappled
-// Incapacitated
-// Invisible
-
-// Prone
-// Restrained
-// Unconscious
-// Exhaustion
-// Bansishment
