encounter list styling, edit name styling, playerview images and links  in broswer now

--- a/todo.txt
+++ b/todo.txt
@@ -58,6 +58,10 @@ fix default image - get first word in type instead of whole thing :)
 
 
 
+playerview
+------
+    add x button to remove uploadedLinks and images
+
 
 king
 ----
