--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@ TODO
 -----
 make stat blocks have a hide for now button that shows a little leaf to reappear
 move buttons from player view to dm view
+import export encouter list
 
     search list
     --
@@ -29,7 +30,6 @@ move buttons from player view to dm view
 
     encounter list changes 
     --
-        change name
         add natural 1's and 20's to auto roll
         toggle hide
         add effects 
@@ -40,9 +40,12 @@ BROKEN
 ----
 when bad guys are in list, play is available even if not saved
 dummys dont get initiative, neither do environment but for different reason
+Auto init somes doesnt sort right, i think this is when its the same creature but not sure
+
 
 DONE - offline mode
 ------
+change name
 encounter start button
 change ac
 auto roll and manual initiative
@@ -66,6 +69,7 @@ add environment token under encounter list
 playerview
 ------
     add x button to remove uploadedLinks and images
+    add button to resize images and their positions
 
 
 king
