added guid to dndbeyond monsters and players

--- a/todo.txt
+++ b/todo.txt
@@ -39,7 +39,7 @@ import export encouter list
 BROKEN 
 ----
 when a creature is not available on dnd beyond they have 0/0 hp which makes them  have a skull
-blood was given to all griffons when one was below hp, probably because same name
+unconfirmed - blood was given to all griffens when one was below hp, probably because same name
 
 when bad guys are in list, play is available even if not saved
 dummys dont get initiative, neither do environment but for different reason
