--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,6 @@ move buttons from player view to dm view
     search list
     --
         add button instead of just clicking any where so you can click an read stats without adding to encounter
-        toggle visible button  
         
     statblock
     --
@@ -33,6 +32,7 @@ move buttons from player view to dm view
         toggle ally/neutral/enemy in encounter list
 
 
+
 playerview
 ------
     add x button to remove uploadedLinks and images
@@ -44,13 +44,19 @@ TODO
 
 BROKEN 
 ----
+DMB player hp doesnt change when updated
+
 enironment stat card is SO fucked
 when bad guys are in list, play is available even if not saved or no name
+auto refresh timer broken on auto refresh
+on enemy show do not auto refresh unless you have dnd_beyond enemies
+dnd_b imports show their hp from time of import and then auto refresh to the current amount - fix is hit a refresh on page load to make sure its up to date 
+dnd_b imports reset to their SAVED LOCAL hp when any other saved local thing is updated, need to save new data to local when refresh
 
 DONE - offline mode
 ------
 import export encouter list
-
+toggle visible button  
 upload creature images
 change name
 encounter start button
