--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,10 @@ offline mod
 make stat blocks have a hide for now button that shows a little leaf to reappear
 move buttons from player view to dm view
 
+    menu
+    --
+        upload all chars from a campaign
+
     search list
     --
         add button instead of just clicking any where so you can click an read stats without adding to encounter
@@ -31,30 +35,28 @@ move buttons from player view to dm view
         current turn marker
         toggle ally/neutral/enemy in encounter list
 
-
-
 playerview
 ------
     add x button to remove uploadedLinks and images
     add button to resize images and add more options to move their positions
     different tiers of blood to match what is going on in game, light, med, heavy blood
 
-TODO
------
 
 BROKEN 
 ----
+dnd_b imports reset to their SAVED LOCAL hp when any other saved local thing is updated, need to save new data to local when refresh
 DMB player hp doesnt change when updated
 
 enironment stat card is SO fucked
 when bad guys are in list, play is available even if not saved or no name
-auto refresh timer broken on auto refresh
+auto refresh timer broken on auto refresh for DMB
 on enemy show do not auto refresh unless you have dnd_beyond enemies
 dnd_b imports show their hp from time of import and then auto refresh to the current amount - fix is hit a refresh on page load to make sure its up to date 
-dnd_b imports reset to their SAVED LOCAL hp when any other saved local thing is updated, need to save new data to local when refresh
+somtimes can have two encounter of the same name
 
 DONE - offline mode
 ------
+current turn tracked on refresh from dndb
 import export encouter list
 toggle visible button  
 upload creature images
@@ -76,8 +78,6 @@ when removing a monster it selects it
 fix default image - get first word in type instead of whole thing :)
 add dummy under encounter list 
 add environment token under encounter list 
-
-
 
 
 FIXED
