--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,7 @@ offline mod
     search list
     --
         add better search, by race, by cr
+
     statblock
     --
         make stat blocks spots show more then one, see redesign 
@@ -27,7 +28,6 @@ offline mod
     encounter list changes 
     --
         when doing next turn on last member, auto scroll to top if off the screen
-        add effects 
         toggle ally/neutral/enemy in encounter list
 
 playerview
@@ -43,11 +43,13 @@ playerview
 
 BROKEN 
 ----
+i think refresh timer is weird
 enironment stat card is SO fucked
 dnd_b imports show their hp from time of import and then auto refresh to the current amount - fix is hit a refresh on page load to make sure its up to date 
 
 DONE - offline mode
 ------
+add effects 
 add button instead of just clicking any where so you can click an read stats without adding to encounter
 track initative and make next button,
 current turn marker
