css changes, new encounter socket changes to avoid creating empty encounters, changes to backend

--- a/todo.txt
+++ b/todo.txt
@@ -43,6 +43,12 @@ offline mod
     I fucked up the hp change menu for dmview it looks bad
     onBlur is not working for temp and override
     make a socket for name change for creatures
+    cant choose from ecnounters list, (not suprised)
+    make images go
+
+    database
+    -- 
+    make table for images
     
 
 playerview
